--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <tittle>El titulo del post</tittle>
+        <tittle>Este es un cambio</tittle>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
